@@ -1,4 +1,5 @@
-./FitExample/
+FitExample/
 ExampleInputs
 myFit.exe*
 *_C*
+.DS_Store
